--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
   .background{
     height: 100vh;
-    width: 100vh;
+    width: 100%;
     position: relative;
   }
   .one{
@@ -34,7 +34,7 @@
     height: 100%;
   }
   .background img{
-    width: 100vh;
+    width: 300%;
     height: 100%;
     object-fit: cover;
   }
