--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@
   .flap > .envelope > .letter {
     bottom: 140px;
     transform: scale(1.5);
+    z-index: 3;
     transition-delay: 1s;
   }
   .flap > .heart {
